changed path to orgchart

--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -1,5 +1,5 @@
 <!--HTML-->
 
-<script src="https://marcin.red/OrgChart.js"></script>
+<script src="amarcin/marcin.red/BALKAN_OrgChartJS_FREE_8.14.42"></script>
 
 <div id="tree"></div>
