removed quirk mode

--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -1,5 +1,7 @@
 <!--HTML-->
-
+<!DOCTYPE html>
+<html lang="en">
+…
 <script src="amarcin/marcin.red/BALKAN_OrgChartJS_FREE_8.14.42"></script>
 
 <div id="tree"></div>
