--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 …
-<script src="amarcin/marcin.red/BALKAN_OrgChartJS_FREE_8.14.42"></script>
+<script src="amarcin/marcin.red/BALKAN_OrgChartJS_FREE_8.14.42/orgchart.js"></script>
 
 <div id="tree"></div>
