trying to pull from root domain for orgchart

--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="orgchart.js"></script>
+<script src="https://marcin.red/orgchart.js"></script>
 
 <div id="tree"></div>
