--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -4,26 +4,23 @@
 
 <script src="https://marcin.red/orgchart.js"></script>
 
-<div id="tree" class="boc-dark" style="overflow: hidden; position: relative;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:block;" width="720" height="240" viewBox="-131,-26,720,240"><defs><style>
-    #olivia_gradient {
-        --color-stop-1: #ffffff;
-        --color-stop-2: #eeeeee;
-        --opacity-stop: 1;
-    }
-    .olivia-f0{
-        font-size: 18px;
-        fill: #757575;
-    }
-    .olivia-f1{
-        font-size: 14px;
-        fill: #757575;
-    }
-    .boc-dark .olivia-f0,.boc-dark .olivia-f1{
-        fill: #aeaeae;
-    }
-    .boc-dark #olivia_gradient {
-        --color-stop-1: #646464;
-        --color-stop-2: #363636;
-        --opacity-stop: 1;
-    }
-</style>
+<div id="tree" class="boc-dark" style="overflow: hidden; position: relative;"></div>
+
+<script>
+
+    let chart = new OrgChart("#balkanApp", {
+        // options
+        nodeBinding: {
+            field_0: "name"
+        },
+        nodes: [
+            { id: 1, name: "Amber McKenzie" },
+            { id: 2, pid: 1, name: "Ava Field" },
+            { id: 3, pid: 1, name: "Peter Stevens" }
+        ]  
+    });
+
+ 
+
+</script> 
+            
