--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -4,7 +4,7 @@
 
 <script src="https://marcin.red/orgchart.js"></script>
 
-<div id="tree" class="boc-dark" style="overflow: hidden; position: relative;"></div>
+<div id="tree" class="boc-dark" style="overflow: hidden; position: relative; width:100%; height:700px;"></div>
 
 <script>
 
