--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <script src="https://marcin.red/orgchart.js"></script>
+<reference path="OrgChart.d.ts" />
 
 <div id="tree" class="boc-dark" style="overflow: hidden; position: relative; width:100%; height:700px;"></div>
 
@@ -19,8 +20,6 @@
             { id: 3, pid: 1, name: "Peter Stevens" }
         ]  
     });
-
- 
 
 </script> 
             
