switched id of chart

--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -9,7 +9,7 @@
 
 <script>
 
-    let chart = new OrgChart("#balkanApp", {
+    let chart = new OrgChart("#tree", {
         // options
         nodeBinding: {
             field_0: "name"
