--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -5,7 +5,7 @@
 <script src="https://marcin.red/orgchart.js"></script>
 <reference path="OrgChart.d.ts" />
 
-<div id="tree" class="boc-dark" style="overflow: hidden; position: relative; width:100%; height:700px;"></div>
+<div id="tree" class="boc-dark" style="overflow: hidden; position: relative;"></div>
 
 <script>
 
