--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -1,25 +1,25 @@
-<!--HTML-->
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://marcin.red/orgchart.js"></script>
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <div id="tree"></div>
 
-<script src="https://marcin.red/orgchart.js"></script>
-<reference path="OrgChart.d.ts" />
-
-<div id="tree" class="boc-dark" style="overflow: hidden; position: relative;"></div>
-
-<script>
-
+  <script>
     let chart = new OrgChart("#tree", {
-        // options
-        nodeBinding: {
-            field_0: "name"
-        },
-        nodes: [
-            { id: 1, name: "Amber McKenzie" },
-            { id: 2, pid: 1, name: "Ava Field" },
-            { id: 3, pid: 1, name: "Peter Stevens" }
-        ]  
+      // options
+      nodeBinding: {
+        field_0: "name"
+      },
+      nodes: [
+        { id: 1, name: "Amber McKenzie" },
+        { id: 2, pid: 1, name: "Ava Field" },
+        { id: 3, pid: 1, name: "Peter Stevens" }
+      ]
     });
-
-</script> 
-            
+  </script>
+</body>
+</html>
