removed first tree

--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="tree"></div>
 
-  <script>
+  <!-- <script>
     let chart = new OrgChart("#tree", {
       // options
       nodeBinding: {
@@ -20,6 +20,6 @@
         { id: 3, pid: 1, name: "Peter Stevens" }
       ]
     });
-  </script>
+  </script> -->
 </body>
 </html>
