--- a/pages/tree/index.html
+++ b/pages/tree/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<reference path="FamilyTree.d.ts" />
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://marcin.red/orgchart.js"></script>
+  <script src="https://marcin.red/familytree.js"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
   <div id="tree"></div>
-
-  <!-- <script>
-    let chart = new OrgChart("#tree", {
-      // options
-      nodeBinding: {
-        field_0: "name"
-      },
-      nodes: [
-        { id: 1, name: "Amber McKenzie" },
-        { id: 2, pid: 1, name: "Ava Field" },
-        { id: 3, pid: 1, name: "Peter Stevens" }
-      ]
-    });
-  </script> -->
 </body>
 </html>
