--- a/pages/tree2/index.html
+++ b/pages/tree2/index.html
@@ -7,10 +7,21 @@
 <script src="https://cdn.amcharts.com/lib/5/geodata/germanyLow.js"></script>
 <script src="https://cdn.amcharts.com/lib/5/fonts/notosans-sc.js"></script> -->
 
-
-<!-- Partial import from CodePen example (https://codepen.io/team/amcharts/pen/ZZObva) -->
-<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/hierarchy.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
-<div id="chartdiv"></div>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <title>Force Directed Network</title>  
+  <link rel="stylesheet" href="styles.css">  
+  <!-- Partial import from CodePen example (https://codepen.io/team/amcharts/pen/ZZObva) -->
+  <script src="https://cdn.amcharts.com/lib/5/index.js"></script>  
+  <script src="https://cdn.amcharts.com/lib/5/hierarchy.js"></script>  
+  <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>  
+</head>  
+<body>  
+  <div id="chartdiv"></div>  
+  <script src="script.js"></script>  
+</body>  
+</html>  
 
