--- a/pages/tree2/index.html
+++ b/pages/tree2/index.html
@@ -13,6 +13,7 @@
   <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>Force Directed Network</title>  
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="styles.css">  
   <!-- Partial import from CodePen example (https://codepen.io/team/amcharts/pen/ZZObva) -->
   <script src="https://cdn.amcharts.com/lib/5/index.js"></script>  
