--- a/pages/tree2/index.html
+++ b/pages/tree2/index.html
@@ -12,7 +12,7 @@
 <head>  
   <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>Force Directed Network</title>  
+  <title>Marcin Family Tree</title>  
   <link rel="icon" type="image/x-icon" href="https://marcin.red/images/favicon.ico">
   <link rel="stylesheet" href="styles.css">  
   <!-- Partial import from CodePen example (https://codepen.io/team/amcharts/pen/ZZObva) -->
